fixing this branch

--- a/FUT/FUT_ANALYSIS.ipynb
+++ b/FUT/FUT_ANALYSIS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 2,
    "id": "e021a424-c67f-44a1-a50f-f5efd634b120",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 3,
    "id": "51871ba9-0949-4cc8-94f2-dd09c13ec221",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 4,
    "id": "75cb37af-7746-4183-be22-36dc4a295eb8",
    "metadata": {},
    "outputs": [],
@@ -52,18 +52,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 5,
    "id": "1ef9688d-41f2-41b6-b37a-3924222465a1",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_6794/511247606.py:1: DtypeWarning: Columns (8,14,18,20,22,25,28,32,38,108,109) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  all_df = pd.read_csv(\"All_players_15_24.csv\")\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -218,17 +210,17 @@
        "      <td>75</td>\n",
        "      <td>73.0</td>\n",
        "      <td>Paris Saint Germain</td>\n",
-       "      <td>16.0</td>\n",
+       "      <td>16</td>\n",
        "      <td>Ligue 1</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>LW</td>\n",
-       "      <td>7.0</td>\n",
+       "      <td>7</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2018-07-01</td>\n",
-       "      <td>2024.0</td>\n",
+       "      <td>2024</td>\n",
        "      <td>18</td>\n",
        "      <td>France</td>\n",
-       "      <td>1335.0</td>\n",
+       "      <td>1335</td>\n",
        "      <td>LW</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Right</td>\n",
@@ -238,7 +230,7 @@
        "      <td>High/Low</td>\n",
        "      <td>Unique</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>349400000.0</td>\n",
+       "      <td>349400000</td>\n",
        "      <td>#Speedster, #Dribbler, #Acrobat, #Clinical fin...</td>\n",
        "      <td>Quick Step +, Rapid, Flair, Trivela</td>\n",
        "      <td>97.0</td>\n",
@@ -331,17 +323,17 @@
        "      <td>94</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Manchester City</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>13</td>\n",
        "      <td>Premier League</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>ST</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>9</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2022-07-01</td>\n",
-       "      <td>2027.0</td>\n",
+       "      <td>2027</td>\n",
        "      <td>36</td>\n",
        "      <td>Norway</td>\n",
-       "      <td>1352.0</td>\n",
+       "      <td>1352</td>\n",
        "      <td>ST</td>\n",
        "      <td>9.0</td>\n",
        "      <td>Left</td>\n",
@@ -351,7 +343,7 @@
        "      <td>High/Medium</td>\n",
        "      <td>Unique</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>356100000.0</td>\n",
+       "      <td>356100000</td>\n",
        "      <td>#Aerial threat, #Distance shooter, #Strength, ...</td>\n",
        "      <td>Acrobatic +, Power Header, Quick Step</td>\n",
        "      <td>89.0</td>\n",
@@ -444,17 +436,17 @@
        "      <td>75</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Manchester City</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>13</td>\n",
        "      <td>Premier League</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>SUB</td>\n",
-       "      <td>17.0</td>\n",
+       "      <td>17</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2015-08-30</td>\n",
-       "      <td>2025.0</td>\n",
+       "      <td>2025</td>\n",
        "      <td>7</td>\n",
        "      <td>Belgium</td>\n",
-       "      <td>1325.0</td>\n",
+       "      <td>1325</td>\n",
        "      <td>CAM</td>\n",
        "      <td>7.0</td>\n",
        "      <td>Right</td>\n",
@@ -464,7 +456,7 @@
        "      <td>High/Medium</td>\n",
        "      <td>Unique</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>190600000.0</td>\n",
+       "      <td>190600000</td>\n",
        "      <td>#Dribbler, #Playmaker, #Distance shooter, #Cro...</td>\n",
        "      <td>Pinged Pass +, Dead Ball, Incisive Pass, Long ...</td>\n",
        "      <td>72.0</td>\n",
@@ -557,17 +549,17 @@
        "      <td>67</td>\n",
        "      <td>112893.0</td>\n",
        "      <td>Inter Miami</td>\n",
-       "      <td>39.0</td>\n",
+       "      <td>39</td>\n",
        "      <td>Major League Soccer</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>RF</td>\n",
-       "      <td>10.0</td>\n",
+       "      <td>10</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2023-07-16</td>\n",
-       "      <td>2025.0</td>\n",
+       "      <td>2025</td>\n",
        "      <td>52</td>\n",
        "      <td>Argentina</td>\n",
-       "      <td>1369.0</td>\n",
+       "      <td>1369</td>\n",
        "      <td>RW</td>\n",
        "      <td>10.0</td>\n",
        "      <td>Left</td>\n",
@@ -577,7 +569,7 @@
        "      <td>Low/Low</td>\n",
        "      <td>Unique</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>61500000.0</td>\n",
+       "      <td>61500000</td>\n",
        "      <td>#Dribbler, #Playmaker, #FK Specialist, #Acroba...</td>\n",
        "      <td>Technical +, Finesse Shot, Dead Ball, Pinged P...</td>\n",
        "      <td>80.0</td>\n",
@@ -670,14 +662,14 @@
        "      <td>81</td>\n",
        "      <td>607.0</td>\n",
        "      <td>Al Ittihad</td>\n",
-       "      <td>350.0</td>\n",
+       "      <td>350</td>\n",
        "      <td>Pro League</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>RS</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>9</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2023-07-01</td>\n",
-       "      <td>2026.0</td>\n",
+       "      <td>2026</td>\n",
        "      <td>18</td>\n",
        "      <td>France</td>\n",
        "      <td>NaN</td>\n",
@@ -690,7 +682,7 @@
        "      <td>Medium/Medium</td>\n",
        "      <td>Normal (170-185)</td>\n",
        "      <td>Yes</td>\n",
-       "      <td>81600000.0</td>\n",
+       "      <td>81600000</td>\n",
        "      <td>#Poacher, #Aerial threat, #Clinical finisher, ...</td>\n",
        "      <td>Finesse Shot +, Dead Ball, Pinged Pass, Tiki T...</td>\n",
        "      <td>79.0</td>\n",
@@ -896,14 +888,14 @@
        "      <td>81</td>\n",
        "      <td>112254.0</td>\n",
        "      <td>Newport County</td>\n",
-       "      <td>61.0</td>\n",
+       "      <td>61</td>\n",
        "      <td>League Two</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>RES</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>35</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2013-10-22</td>\n",
-       "      <td>2015.0</td>\n",
+       "      <td>2015</td>\n",
        "      <td>50</td>\n",
        "      <td>Wales</td>\n",
        "      <td>NaN</td>\n",
@@ -1009,14 +1001,14 @@
        "      <td>57</td>\n",
        "      <td>112254.0</td>\n",
        "      <td>Newport County</td>\n",
-       "      <td>61.0</td>\n",
+       "      <td>61</td>\n",
        "      <td>League Two</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>RES</td>\n",
-       "      <td>39.0</td>\n",
+       "      <td>39</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2014-08-14</td>\n",
-       "      <td>2015.0</td>\n",
+       "      <td>2015</td>\n",
        "      <td>50</td>\n",
        "      <td>Wales</td>\n",
        "      <td>NaN</td>\n",
@@ -1122,14 +1114,14 @@
        "      <td>76</td>\n",
        "      <td>1873.0</td>\n",
        "      <td>Wisła Kraków</td>\n",
-       "      <td>66.0</td>\n",
+       "      <td>66</td>\n",
        "      <td>Ekstraklasa</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>RES</td>\n",
-       "      <td>43.0</td>\n",
+       "      <td>43</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2012-07-01</td>\n",
-       "      <td>2015.0</td>\n",
+       "      <td>2015</td>\n",
        "      <td>37</td>\n",
        "      <td>Poland</td>\n",
        "      <td>NaN</td>\n",
@@ -1235,14 +1227,14 @@
        "      <td>70</td>\n",
        "      <td>112260.0</td>\n",
        "      <td>Fleetwood Town</td>\n",
-       "      <td>60.0</td>\n",
+       "      <td>60</td>\n",
        "      <td>League One</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>RES</td>\n",
-       "      <td>26.0</td>\n",
+       "      <td>26</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2014-03-11</td>\n",
-       "      <td>2021.0</td>\n",
+       "      <td>2021</td>\n",
        "      <td>14</td>\n",
        "      <td>England</td>\n",
        "      <td>NaN</td>\n",
@@ -1348,14 +1340,14 @@
        "      <td>72</td>\n",
        "      <td>143.0</td>\n",
        "      <td>Exeter City</td>\n",
-       "      <td>61.0</td>\n",
+       "      <td>61</td>\n",
        "      <td>League One</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>RES</td>\n",
-       "      <td>17.0</td>\n",
+       "      <td>17</td>\n",
        "      <td>NaN</td>\n",
        "      <td>2006-06-26</td>\n",
-       "      <td>2015.0</td>\n",
+       "      <td>2015</td>\n",
        "      <td>32</td>\n",
        "      <td>Malta</td>\n",
        "      <td>NaN</td>\n",
@@ -1500,49 +1492,49 @@
        "180020          NaN    2000.0   41  1973-01-14       175         72   \n",
        "\n",
        "        club_team_id            club_name league_id          league_name  \\\n",
-       "0               73.0  Paris Saint Germain      16.0              Ligue 1   \n",
-       "1               10.0      Manchester City      13.0       Premier League   \n",
-       "2               10.0      Manchester City      13.0       Premier League   \n",
-       "3           112893.0          Inter Miami      39.0  Major League Soccer   \n",
-       "4              607.0           Al Ittihad     350.0           Pro League   \n",
+       "0               73.0  Paris Saint Germain        16              Ligue 1   \n",
+       "1               10.0      Manchester City        13       Premier League   \n",
+       "2               10.0      Manchester City        13       Premier League   \n",
+       "3           112893.0          Inter Miami        39  Major League Soccer   \n",
+       "4              607.0           Al Ittihad       350           Pro League   \n",
        "...              ...                  ...       ...                  ...   \n",
-       "180016      112254.0       Newport County      61.0           League Two   \n",
-       "180017      112254.0       Newport County      61.0           League Two   \n",
-       "180018        1873.0         Wisła Kraków      66.0          Ekstraklasa   \n",
-       "180019      112260.0       Fleetwood Town      60.0           League One   \n",
-       "180020         143.0          Exeter City      61.0           League One   \n",
+       "180016      112254.0       Newport County        61           League Two   \n",
+       "180017      112254.0       Newport County        61           League Two   \n",
+       "180018        1873.0         Wisła Kraków        66          Ekstraklasa   \n",
+       "180019      112260.0       Fleetwood Town        60           League One   \n",
+       "180020         143.0          Exeter City        61           League One   \n",
        "\n",
        "       league_level club_position club_jersey_number club_loaned_from  \\\n",
-       "0               1.0            LW                7.0              NaN   \n",
-       "1               1.0            ST                9.0              NaN   \n",
-       "2               1.0           SUB               17.0              NaN   \n",
-       "3               1.0            RF               10.0              NaN   \n",
-       "4               1.0            RS                9.0              NaN   \n",
+       "0                 1            LW                  7              NaN   \n",
+       "1                 1            ST                  9              NaN   \n",
+       "2                 1           SUB                 17              NaN   \n",
+       "3                 1            RF                 10              NaN   \n",
+       "4                 1            RS                  9              NaN   \n",
        "...             ...           ...                ...              ...   \n",
-       "180016          4.0           RES               35.0              NaN   \n",
-       "180017          4.0           RES               39.0              NaN   \n",
-       "180018          1.0           RES               43.0              NaN   \n",
-       "180019          3.0           RES               26.0              NaN   \n",
-       "180020          4.0           RES               17.0              NaN   \n",
+       "180016            4           RES                 35              NaN   \n",
+       "180017            4           RES                 39              NaN   \n",
+       "180018            1           RES                 43              NaN   \n",
+       "180019            3           RES                 26              NaN   \n",
+       "180020            4           RES                 17              NaN   \n",
        "\n",
        "       club_joined_date club_contract_valid_until_year  nationality_id  \\\n",
-       "0            2018-07-01                         2024.0              18   \n",
-       "1            2022-07-01                         2027.0              36   \n",
-       "2            2015-08-30                         2025.0               7   \n",
-       "3            2023-07-16                         2025.0              52   \n",
-       "4            2023-07-01                         2026.0              18   \n",
+       "0            2018-07-01                           2024              18   \n",
+       "1            2022-07-01                           2027              36   \n",
+       "2            2015-08-30                           2025               7   \n",
+       "3            2023-07-16                           2025              52   \n",
+       "4            2023-07-01                           2026              18   \n",
        "...                 ...                            ...             ...   \n",
-       "180016       2013-10-22                         2015.0              50   \n",
-       "180017       2014-08-14                         2015.0              50   \n",
-       "180018       2012-07-01                         2015.0              37   \n",
-       "180019       2014-03-11                         2021.0              14   \n",
-       "180020       2006-06-26                         2015.0              32   \n",
+       "180016       2013-10-22                           2015              50   \n",
+       "180017       2014-08-14                           2015              50   \n",
+       "180018       2012-07-01                           2015              37   \n",
+       "180019       2014-03-11                           2021              14   \n",
+       "180020       2006-06-26                           2015              32   \n",
        "\n",
        "       nationality_name nation_team_id nation_position  nation_jersey_number  \\\n",
-       "0                France         1335.0              LW                  10.0   \n",
-       "1                Norway         1352.0              ST                   9.0   \n",
-       "2               Belgium         1325.0             CAM                   7.0   \n",
-       "3             Argentina         1369.0              RW                  10.0   \n",
+       "0                France           1335              LW                  10.0   \n",
+       "1                Norway           1352              ST                   9.0   \n",
+       "2               Belgium           1325             CAM                   7.0   \n",
+       "3             Argentina           1369              RW                  10.0   \n",
        "4                France            NaN             NaN                   NaN   \n",
        "...                 ...            ...             ...                   ...   \n",
        "180016            Wales            NaN             NaN                   NaN   \n",
@@ -1565,11 +1557,11 @@
        "180020          Right         3            2                         1   \n",
        "\n",
        "            work_rate         body_type real_face release_clause_eur  \\\n",
-       "0            High/Low            Unique       Yes        349400000.0   \n",
-       "1         High/Medium            Unique       Yes        356100000.0   \n",
-       "2         High/Medium            Unique       Yes        190600000.0   \n",
-       "3             Low/Low            Unique       Yes         61500000.0   \n",
-       "4       Medium/Medium  Normal (170-185)       Yes         81600000.0   \n",
+       "0            High/Low            Unique       Yes          349400000   \n",
+       "1         High/Medium            Unique       Yes          356100000   \n",
+       "2         High/Medium            Unique       Yes          190600000   \n",
+       "3             Low/Low            Unique       Yes           61500000   \n",
+       "4       Medium/Medium  Normal (170-185)       Yes           81600000   \n",
        "...               ...               ...       ...                ...   \n",
        "180016  Medium/Medium     Normal (185+)        No                NaN   \n",
        "180017  Medium/Medium    Lean (170-185)        No                NaN   \n",
@@ -1814,13 +1806,13 @@
        "[180021 rows x 110 columns]"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_df = pd.read_csv(\"All_players_15_24.csv\")\n",
+    "all_df = pd.read_csv(\"All_players_15_24.csv\", low_memory=False)\n",
     "all_df"
    ]
   },
