--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -7,12 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pandas and numpy for data manipulation\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
+    "# matplotlib for plotting\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "# sklearn models and functions\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import  accuracy_score, confusion_matrix, classification_report\n",
@@ -21,7 +24,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn import tree, naive_bayes\n",
     "\n",
-    "\n",
+    "# xgboost for classification\n",
     "from xgboost import XGBClassifier\n"
    ]
   },
